Fixed CORB issue. Pieces are now visible.

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,8 @@ ol, ul {
 
 .square {
   background: transparent;
-  border: 1px solid transparent;
+  border: 1px solid;
+  border-style: outset;
   float: left;
   font-size: 24px;
   font-weight: bold;
@@ -58,11 +59,11 @@ ol, ul {
 
 /*Board color scheme Wheat from http://omgchess.blogspot.com/2015/09/chess-board-color-schemes.html*/
 .dark-square{
-  background-color: RGB(187,190,100);
+  background-color: rgb(139, 69, 19);
   }
   
   .light-square{
-      background-color: RGB(234,240,206);
+      background-color: burlywood;
   }
   
   #player-turn-box{
